--- a/css/styles.css
+++ b/css/styles.css
@@ -160,10 +160,17 @@
     border-radius: 4px;
   }
   /* portfolio project */
-   
-    
-  
-   .project-list {
+
+     .cards-box {
+      flex: flex wrap;
+      display: flex;
+     }
+
+      .border-image {
+      flex-basis: calc((100%-60px) / 3)
+  }
+
+     .project-list {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
