--- a/css/styles.css
+++ b/css/styles.css
@@ -162,15 +162,15 @@
   /* portfolio project */
 
      .cards-box {
-      flex: flex wrap;
+      flex-wrap: wrap;
       display: flex;
      }
 
-      .border-image {
+     .cards-items {
       flex-basis: calc((100%-60px) / 3)
   }
 
-     .project-list {
+    .project-list {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
