--- a/css/styles.css
+++ b/css/styles.css
@@ -1,324 +1,360 @@
 :root {
-    --white: #fff;
-    --black: #000;
-    --blue: #2196f3;
-    --darkgrey: #2f303a;
-    --grey: #757575;
-    --lightgrey: #e5e5e5;
-    --lightcream: #ececec;
-    --notblack: #212121;
-    --notwhite: #f5f4fa;
-    --footerlinks: rgba(255, 255, 255, 0.6);
-    --productborder: #eeeeee;
-    --background: rgba(47, 48, 58, 0.4);
-    --iconcolor: #afb1b8;
-    --footericon: rgba(255, 255, 255, 0.1);
-    --backgroundbackdrop: rgba(000, 000, 000, 0.2);
-  }
-  body {
-    font-family: "Roboto", "Raleway", sans-serif;
-    color: var(--grey);
-    background-color: var(--white);
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 0.03em;
+  --white: #fff;
+  --black: #000;
+  --blue: #2196f3;
+  --darkgrey: #2f303a;
+  --grey: #757575;
+  --lightgrey: #e5e5e5;
+  --lightcream: #ececec;
+  --notblack: #212121;
+  --notwhite: #f5f4fa;
+  --footerlinks: rgba(255, 255, 255, 0.6);
+  --productborder: #eeeeee;
+  --background: rgba(47, 48, 58, 0.4);
+  --iconcolor: #afb1b8;
+  --footericon: rgba(255, 255, 255, 0.1);
+  --backgroundbackdrop: rgba(000, 000, 000, 0.2);
+}
+body {
+  font-family: "Roboto", "Raleway", sans-serif;
+  color: var(--grey);
+  background-color: var(--white);
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.blue-text:hover,
+.blue-text:focus {
+  color: var(--blue);
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+/* header */
+.header {
+  width: 1200 px;
+  border-bottom: 1px solid #ececec;
+  margin: 0 auto;
+  align-content: center;
+}
+.header-style {
+  display: flex;
+}
+.logo-box {
+  padding-top: 24px;
+}
+
+.logo-style {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--black);
+}
+.blue-text {
+  color: var(--blue);
+}
+.link-no-underline {
+  text-decoration: none;
+}
+.link-style {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.14285714;
+  color: var(--notblack);
+}
+.navigate-list {
+  display: flex;
+  list-style: none;
+  gap: 46px;
+  margin: right;
+  align-content:center;
+  margin-left: 93px; 
+  margin-top:32px;
+ 
+}
+.contact-style {
+  gap: 50px;
+  display: flex;
+  list-style: none;
+  margin: left;
+  align-content:center;
+  margin-left: 227px;
+  margin-top:32px;
+}
+
+.contact-link-style {
+  color: var(--grey);
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.14285714;
+}
+/* top-section */
+.top-section {
+  background-color: var(--darkgrey);
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 200px;
+}
+.top-section-text {
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  padding: 200px 0 30px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.363;
+  margin: 0;
+}
+.top-section-button {
+  color: var(--white);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  background-color: var(--blue);
+  border-style: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+}
+/* top section portfolio */
+.portfolio-top-section {
+  margin: 94px 215px;
+}
+.top-section-list {
+  list-style: none;
+  display: flex;
+  gap: 8px;
+  padding: 94px 318px 50px 310px;
+  margin: 0px;
+}
+.button-portfolio {
+  background-color: var(--notwhite);
+  border-width: 0;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+  border-radius: 3px;
+  padding: 6px 22px;
+  font-family: "Roboto";
+  cursor: pointer;
+}
+.blue-background:hover {
+  background-color: var(--blue);
+  color: var(--white);
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+
+  border-radius: 4px;
+}
+/* portfolio project */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p,
+figure,
+figcaption {
     margin: 0;
     padding: 0;
-  }
-  .container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
-  
-  .blue-text:hover,
-  .blue-text:focus {
-    color: var(--blue);
-  }
-  .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-  
-  /* header */
-  .header {
-    width: 1200 px;
-    border-bottom: 1px solid #ececec;
-    margin: 0 auto;
-  }
-  .header-style {
-    display: flex;
-  }
-  .logo-box {
-    padding-top: 24px;
-  }
-  
-  .logo-style {
-    font-family: "Raleway";
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: var(--black);
-  }
-  .blue-text {
-    color: var(--blue);
-  }
-  .link-no-underline {
-    text-decoration: none;
-  }
-  .link-style {
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    line-height: 1.14285714;
-    color: var(--notblack);
-  }
-  .navigate-list {
-    display: flex;
+}
+ul {
     list-style: none;
-    gap: 46px;
-    margin: 0;
-    padding: 32px 0 31px 93px;
-  }
-  .contact-style {
-    gap: 50px;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 32px 27px 31px 371px;
-  }
-  .contact-link-style {
-    color: var(--grey);
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    line-height: 1.14285714;
-  }
-  /* top-section */
-  .top-section {
-    background-color: var(--darkgrey);
-    color: var(--white);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding-bottom: 200px;
-  }
-  .top-section-text {
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    padding: 200px 0 30px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.363;
-    margin: 0;
-  }
-  .top-section-button {
-    color: var(--white);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    background-color: var(--blue);
-    border-style: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-    width: 200px;
-    height: 50px;
-  }
-  /* top section portfolio */
-  .portfolio-top-section {
-    margin: 94px 215px;
-  }
-  .top-section-list {
-    list-style: none;
-    display: flex;
-    gap: 8px;
-    padding: 94px 318px 50px 310px;
-    margin: 0px;
-  }
-  .button-portfolio {
-    background-color: var(--notwhite);
-    border-width: 0;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.625;
-    border-radius: 3px;
-    padding: 6px 22px;
-    font-family: "Roboto";
-    cursor: pointer;
-  }
-  .blue-background:hover {
-    background-color: var(--blue);
-    color: var(--white);
-  
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-  
-    border-radius: 4px;
-  }
-  /* portfolio project */
-
-     .cards-box {
-      flex-wrap: wrap;
-      display: flex;
-     }
-
-     .cards-items {
-      flex-basis: calc((100%-60px) / 3)
-  }
-
-    .project-list {
+}
+img {
+    display: block;
+}
+ .cards-box {
+    flex-wrap: wrap;
     display: flex;
     gap: 30px;
+    align-content: stretch;
     flex-wrap: wrap;
     margin: 0px;
     list-style: none;
     padding: 0 0px 94px;
-  }
-  .project-title {
-    letter-spacing: 0.06em;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
     color: var(--notblack);
-    margin: 0px;
-    padding: 20px 24px 4px 24px;
-    text-align: left;
   }
-  .project-description {
-    font-size: 16px;
-    line-height: 1.875;
-    color: var(--grey);
-    margin: 0px;
-    padding: 0px 24px 20px 24px;
+
+  .cards-items {
+    flex-basis: calc((100% - 60px) / 3);
   }
-  /* speciality */
-  .speciality-header {
-    color: var(--notblack);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.143;
-    text-transform: uppercase;
-    margin: 0px auto;
-  }
-  .speciality-text {
-    line-height: 1.71428571;
-    color: var(--grey);
-    margin: 0;
-    padding-top: 10px;
-    padding-bottom: 3px;
-  }
-  .speciality-list {
-    display: flex;
-    list-style: none;
-    gap: 30px;
-    justify-content: center;
-    margin: 0;
-    padding: 94px 15px;
-  }
-  /* service */
-  .service-header {
-    color: var(--notblack);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.172;
-    text-align: center;
-    margin: 0 auto;
-    padding: 0 424px 50px;
-  }
-  .service-list {
-    display: flex;
-    list-style: none;
-    gap: 30px;
-    justify-content: center;
-    margin: 0;
-    padding: 0 15px 94px;
-  }
-  /* team */
-  .team-background {
-    background-color: var(--notwhite);
-  }
-  .team-header {
-    color: var(--notblack);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.166;
-    text-align: center;
-    margin: 0;
-    padding: 94px 495px 50px;
-  }
-  .team-list {
-    display: flex;
-    list-style: none;
-    gap: 30px;
-    justify-content: center;
-    margin: 0;
-    padding: 0 15px 102px;
-  }
-  .team-item {
-    background-color: var(--white);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
-  .team-name {
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--notblack);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.1875;
-    margin: 0;
-    padding: 30px 99px 10px;
-  }
-  .team-card {
-    text-align: center;
-    font-weight: 400;
-    letter-spacing: 0.03em;
-    font-size: 16px;
-    line-height: 1.1875;
-    margin: 0 auto;
-    padding-bottom: 30px;
-  }
-  /* footer */
-  .footer {
-    background-color: var(--darkgrey);
-  }
-  .footer-box {
-    padding-top: 66px;
-    padding-bottom: 62px;
-  }
-  .footer-logo {
-    font-family: "Raleway";
-    font-style: normal;
-    color: var(--white);
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19230769;
-    margin: 0;
-  }
-  .footer-list {
-    display: flex;
-    list-style: none;
-    flex-direction: column;
-    padding-left: 0px;
-    gap: 9px;
-    padding-top: 20px;
-    font-style: normal;
-    color: var(--white);
-    margin: 0;
-  }
-  .address-text {
-    font-style: normal;
-    line-height: 1.714;
-    color: var(--white);
-    margin: 0;
-  }
-  .address-link {
-    color: var(--footerlinks);
-    font-size: 14px;
-    line-height: 1.71;
-  }
+
+.project-list {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  margin: 0px;
+  list-style: none;
+  padding: 0 0px 94px;
+}
+
+.project-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  color: var(--notblack);
+  margin: 0px;
+  padding: 20px 24px 4px 24px;
+  text-align: left;
+}
+.project-description {
+  font-size: 16px;
+  line-height: 1.875;
+  color: var(--grey);
+  margin: 0px;
+  padding: 0px 24px 20px 24px;
+}
+/* speciality */
+.speciality-header {
+  color: var(--notblack);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  text-transform: uppercase;
+  margin: 0px auto;
+}
+.speciality-text {
+  line-height: 1.71428571;
+  color: var(--grey);
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 3px;
+}
+.speciality-list {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  justify-content: center;
+  margin: 0;
+  padding: 94px 15px;
+}
+/* service */
+.service-header {
+  color: var(--notblack);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.172;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0 424px 50px;
+}
+.service-list {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  justify-content: center;
+  margin: 0;
+  padding: 0 15px 94px;
+}
+/* team */
+.team-background {
+  background-color: var(--notwhite);
+}
+.team-header {
+  color: var(--notblack);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.166;
+  text-align: center;
+  margin: 0;
+  padding: 94px 495px 50px;
+}
+.team-list {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  justify-content: center;
+  margin: 0;
+  padding: 0 15px 102px;
+}
+.team-item {
+  background-color: var(--white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-name {
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--notblack);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1875;
+  margin: 0;
+  padding: 30px 99px 10px;
+}
+.team-card {
+  text-align: center;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  font-size: 16px;
+  line-height: 1.1875;
+  margin: 0 auto;
+  padding-bottom: 30px;
+}
+/* footer */
+.footer {
+  background-color: var(--darkgrey);
+}
+.footer-box {
+  padding-top: 66px;
+  padding-bottom: 62px;
+}
+.footer-logo {
+  font-family: "Raleway";
+  font-style: normal;
+  color: var(--white);
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19230769;
+  margin: 0;
+}
+.footer-list {
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  padding-left: 0px;
+  gap: 9px;
+  padding-top: 20px;
+  font-style: normal;
+  color: var(--white);
+  margin: 0;
+}
+.address-text {
+  font-style: normal;
+  line-height: 1.714;
+  color: var(--white);
+  margin: 0;
+}
+.address-link {
+  color: var(--footerlinks);
+  font-size: 14px;
+  line-height: 1.71;
+}
