--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,12 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+.wrapper {
+  width: 1200 px;
+  border-bottom: 1px solid #ececec;
+  margin: 0 auto;
+  align-content: center;
+}
 
 /* header */
 .header {
@@ -99,6 +105,7 @@ body {
   letter-spacing: 0.02em;
   line-height: 1.14285714;
 }
+
 /* top-section */
 .top-section {
   background-color: var(--darkgrey);
@@ -235,63 +242,67 @@ img {
 }
 /* speciality */
 .speciality-header {
-  color: var(--notblack);
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.143;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin: 0px auto;
+  color: var(--notblack);
+  margin-bottom: 10px;
 }
 .speciality-text {
-  line-height: 1.71428571;
-  color: var(--grey);
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 3px;
-  
- }
- .short-article-text {
   width: 270px;
   height: 75px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-   
+  line-height: 1.71;
   letter-spacing: 0.03em;
+  color: var(--grey);
+}
+
+.speciality-list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin: 0;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  justify-content: center;
  }
    
-
-
-.specjality-list {
-  display: flex;
-  list-style: none;
-  gap: 30px;
-  justify-content: center;
-  margin: 0;
-  padding: 94px, 15px;
-   
-} 
-
 /* service */
 .service-header {
   color: var(--notblack);
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.172;
+  line-height: 1.17;
   text-align: center;
   margin: 0 auto;
-  padding: 0 50px;
+  font-family: "Roboto";
+  font-style: normal;
+  letter-spacing: 0.03em;
 }
+  
 .service-list {
   display: flex;
-  list-style: none;
+  flex-wrap: wrap;
   gap: 30px;
-  justify-content: center;
-  margin: 0;
-  padding: 0 15px 94px;
+  margin: 0%;
+  padding-left: 0px;
+  padding-top: 50px;
+  padding-bottom: 94px;
 }
-/* team */
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+
+/*team */
 .team-background {
   background-color: var(--notwhite);
 }
