--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ body {
 }
 .header-style-container{
  display: flex;
- align-items: center;
+ flex-direction: row;
 }
 .logo-style {
   font-family: "Raleway";
