--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ img {
   color: var(--notblack);
   margin-bottom: 10px;
 }
-.speciality-text {
+.specjality-text {
   width: 270px;
   height: 75px;
   font-family: "Roboto";
