--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,9 @@ img {
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
 }
-   
+.photo-portfolio {
+  color:#212121
+}
 
  .cards-box {
   flex-wrap: wrap;
@@ -338,7 +340,8 @@ img {
   font-size: 16px;
   line-height: 1.1875;
   margin: 0;
-  padding: 30px 99px 10px;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .team-card {
   text-align: center;
