--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
 /* header */
  
 .header {
-  width: 1200 px;
+  width: 1200px;
   border-bottom: 1px solid #ececec;
   margin: 0 auto;
   align-content: center;
@@ -188,7 +188,7 @@ img {
 }
 
 .caption-border {
-  padding: 20 24px;
+  padding: 20px 24px;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
@@ -209,7 +209,7 @@ img {
   flex-wrap: wrap;
   margin: 0px;
   list-style: none;
-  padding: 0 0px 94px;
+  padding: 0px 0px 94px;
   color: var(--notblack);
   }
 
